--- a/static/index.html
+++ b/static/index.html
@@ -126,10 +126,12 @@
             <a class="nav-link" href="#">Contacto</a>
           </li>
         </ul>
-        <span class="navbar-text me-3">
+        <span class="navbar-text me-3" id="welcomeMessage">
           Bienvenido/a, Usuario
         </span>
-        <a href="#" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#loginModal">Iniciar Sesión</a>
+        <a href="#" id="logoutBtn" class="btn btn-outline-light d-none">Cerrar Sesión</a>
+        <a href="#" id="authBtn" class="btn btn-outline-light" data-bs-toggle="modal"
+          data-bs-target="#loginModal">Iniciar Sesión</a>
         <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
@@ -158,7 +160,6 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
   <div class="hero d-flex align-items-center">
     <div class="container">
       <h1>Descubre Obras Únicas</h1>
@@ -177,27 +178,34 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
 
   <script>
-    const navbarText = document.querySelector(".navbar-text");
-
-    // Revisa si ya existe un usuario logueado en el localStorage
+    const navbarText = document.getElementById("welcomeMessage");
+    const authBtn = document.getElementById("authBtn");
+    
     document.addEventListener("DOMContentLoaded", () => {
-      const storedUsername = localStorage.getItem("username");
-      if (storedUsername) {
-        navbarText.textContent = `Bienvenido, ${storedUsername}`;
+      const token = localStorage.getItem("token");
+      if (token) {
+        try {
+          const decoded = jwt_decode(token); // Decodifica el token
+          const username = decoded.username; // Accede al username del payload
+          updateUIForLoggedInUser(username);
+        } catch (error) {
+          console.error("Error al decodificar el token:", error);
+        }
+      } else {
+        updateUIForLoggedOutUser();
       }
     });
 
     document.getElementById("loginForm").addEventListener("submit", async function (event) {
       event.preventDefault();
 
-      // Obtener los datos del formulario
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
       try {
-        // Enviar datos a la API
         const response = await fetch("http://localhost:3000/api/login", {
           method: "POST",
           headers: {
@@ -210,14 +218,10 @@
 
         if (response.ok) {
           alert("Inicio de sesión exitoso");
-
-          // Guardar el username en localStorage
-          localStorage.setItem("username", username);
-
-          // Actualizar el texto de bienvenida
-          navbarText.textContent = `Bienvenido/a, ${username}`;
-
-          // Cerrar el modal de login
+          localStorage.setItem("token", result.token);
+          const token = localStorage.getItem("token");
+          updateUIForLoggedInUser(username);
+ 
           const loginModal = document.getElementById("loginModal");
           const modal = bootstrap.Modal.getInstance(loginModal);
           modal.hide();
@@ -229,6 +233,31 @@
         alert("No se pudo conectar al servidor. Inténtalo de nuevo.");
       }
     });
+
+
+    authBtn.addEventListener("click", function () {
+      if (authBtn.textContent == "Cerrar Sesión") {
+        localStorage.removeItem("token");
+        updateUIForLoggedOutUser();
+        alert("Sesión cerrada correctamente");
+      }
+    });
+
+
+    function updateUIForLoggedInUser(username) {
+      navbarText.textContent = `Bienvenido/a, ${username}`;
+      authBtn.textContent = "Cerrar Sesión";
+      authBtn.removeAttribute("data-bs-toggle");
+      authBtn.removeAttribute("data-bs-target");
+    }
+
+    function updateUIForLoggedOutUser() {
+      navbarText.textContent = "Bienvenido/a, Usuario";
+      authBtn.textContent = "Iniciar Sesión";
+      authBtn.setAttribute("data-bs-toggle", "modal");
+      authBtn.setAttribute("data-bs-target", "#loginModal");
+    }
+
   </script>
 
 </body>
